# fantastic-lamp

./: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  pyproject.toml  verify_logic.py
app/models/: account.rb  entry.rb  transaction.rb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml
config/environments/: production.rb
db/: schema.rb
db/migrate/: 20260128110100_create_accounts.rb  20260128153516_create_transactions.rb  20260128153701_create_entries.rb
spec/factories/: accounts.rb  entries.rb  transactions.rb
spec/models/: account_spec.rb  entry_spec.rb  transaction_spec.rb
src/: app.py  models.py
src/templates/: index.html
tests/: conftest.py  test_accounts.py  test_crud.py  test_forecasting.py  test_models.py
